Add pagination and versioning

--- a/WebAppALZA.API/appsettings.json
+++ b/WebAppALZA.API/appsettings.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=ProductAlza;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },  
-    "InitFilePath": "Data/products.json",
+  },
+  "InitFilePath": "Data/products.json",
+  "DefaultPageSize": 10,
   "AllowedHosts": "*"
 }
